# opendiary-server

./: .gitignore  Cargo.toml  schemas.sql
src/: auth.rs  err.rs  io.rs  main.rs  models.rs
