[package]
name = "opendiary-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
serde_json = "1.0.85"
serde_with = "2.0.1"
anyhow = "1.0.65"

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[dependencies.postcard]
version = "1.0.2"
features = ["alloc"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dependencies.axum]
version = "0.6.0-rc.2"
features = ["headers"]