[package]
name = "opendiary-server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.65"
pbkdf2 = "0.11.0"
sha2 = "0.10.6"
rand = "0.8.5"
hex = "0.4.3"
serde_with = "1.14.0"

[dependencies.rand_core]
version = "0.6.4"
features = ["std"]

[dependencies.sqlx]
version = "0.6.2"
features = [ "runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"]

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[dependencies.postcard]
version = "1.0.2"
features = ["alloc"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dependencies.axum]
version = "0.5.16"
features = ["headers","query"]
